--- a/McAI.Proto/McAI.Proto.csproj
+++ b/McAI.Proto/McAI.Proto.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <StartupObject>McAI.Proto.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
