--- a/McAI.Proto/McAI.Proto.csproj
+++ b/McAI.Proto/McAI.Proto.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\Server\" />
+    <Folder Include="Commands\ToClient\" />
   </ItemGroup>
 
   <ItemGroup>
