--- a/McAI.Proto/McAI.Proto.csproj
+++ b/McAI.Proto/McAI.Proto.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Iconic.Zlib.Netstandard" Version="1.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\ToClient\Game\" />
+    <Folder Include="Packet\ToClient\Game\" />
+  </ItemGroup>
+
 </Project>
