--- a/Bost.AgentsHub/Bost.AgentsHub.csproj
+++ b/Bost.AgentsHub/Bost.AgentsHub.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\McAI.BOT\Bost.BOT.csproj" />
+  </ItemGroup>
+
 </Project>
