--- a/Bost.AgentsHub/Bost.AgentsHub.csproj
+++ b/Bost.AgentsHub/Bost.AgentsHub.csproj
@@ -17,4 +17,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Bost.BOT\Bost.Agent.csproj" />
+    <ProjectReference Include="..\Bost.Shared\Bost.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
