--- a/Bost.BOT.Tests/Bost.BOT.Tests.csproj
+++ b/Bost.BOT.Tests/Bost.BOT.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Bost.BOT\Bost.BOT.csproj" />
+    <ProjectReference Include="..\Bost.BOT\Bost.Agent.csproj" />
   </ItemGroup>
 
 </Project>
