--- a/Bost.Deductions/Bost.Deductions.csproj
+++ b/Bost.Deductions/Bost.Deductions.csproj
@@ -1,7 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Ionic.Zlib.Core" Version="1.0.0" />
+    <PackageReference Include="Shuttle.Core.Compression" Version="10.0.4" />
+  </ItemGroup>
 
 </Project>
