--- a/Bost.BOT/Bost.Agent.csproj
+++ b/Bost.BOT/Bost.Agent.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Serilog" Version="2.10.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Bost.Proto\Bost.Proto.csproj" />
   </ItemGroup>
 
